<resources>
    <string name="app_name">NeDoMed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patient_id">Patient ID</string>
    <string name="my_doctor">My doctor</string>
    <string name="medical_card">Medical card</string>
    <string name="protocols">Protocols</string>
    <string name="schedule_description">Your personal plan for regular medical examinations to maintain overall health</string>
    <string name="medications">Medications</string>
    <string name="results">Laboratory tests results</string>
    <string name="txt_error_message">Error</string>
</resources>