<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/topTextView"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_margin="16dp"
        android:text="@string/medical_card"
        android:textSize="42sp"
        android:fontFamily="@font/muslish"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/clickableContainerMySchedule"
        android:layout_width="219dp"
        android:layout_height="289dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/secondaryColor"
        app:cardCornerRadius="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clickableContainerMyDoctors">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="104dp"
            android:background="@drawable/calendar_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="64dp"
            android:fontFamily="@font/muslish"
            android:padding="16dp"
            android:text="Check-up schedule"
            android:textColor="@color/white"
            android:textColorLink="@color/onPrimaryColor"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/muslish"
            android:padding="16dp"
            android:text="@string/schedule_description"
            android:textColor="@color/onSecondaryTintColor"
            android:textColorLink="@color/onSecondaryTintColor"
            android:textSize="12sp"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/clickableContainerMyMedications"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/primaryColor"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clickableContainerMyResults">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="24dp"
            android:background="@drawable/medication" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom"
            android:fontFamily="@font/muslish"
            android:padding="16dp"
            android:text="@string/medications"
            android:textColor="@color/onPrimaryColor"
            android:textColorLink="@color/onPrimaryColor"
            android:textSize="12sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/clickableContainerMyProfile"
        android:layout_width="372dp"
        android:layout_height="59dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/primaryColor"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topTextView">

        <!-- Contents of the block container -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/muslish"
            android:padding="16dp"
            android:text="@string/patient_id"
            android:textColor="@color/onPrimaryColor"
            android:textColorLink="@color/onPrimaryColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/muslish"
            android:padding="16dp"
            android:layout_gravity="end"
            android:text="5"
            android:textColor="@color/onPrimaryColorTint"
            android:textColorLink="@color/onPrimaryColor"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/clickableContainerMyDoctors"
        android:layout_width="220dp"
        android:layout_height="126dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:background="@color/primaryColor"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="36dp"
        app:layout_constraintEnd_toStartOf="@id/clickableContainerMyProtocols"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clickableContainerMyProfile">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="24dp"
            android:background="@drawable/doctor_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom"
            android:fontFamily="@font/muslish"
            android:padding="16dp"
            android:text="@string/my_doctor"
            android:textColor="@color/onPrimaryColor"
            android:textColorLink="@color/onPrimaryColor"
            android:textSize="12sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/clickableContainerMyResults"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/primaryColor"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clickableContainerMyProtocols">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="24dp"
            android:background="@drawable/tests_result_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom"
            android:fontFamily="@font/muslish"
            android:padding="16dp"
            android:text="@string/results"
            android:textColor="@color/onPrimaryColor"
            android:textColorLink="@color/onPrimaryColor"
            android:textSize="12sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/clickableContainerMyProtocols"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:layout_margin="16dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="8dp"
        android:background="@color/primaryColor"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/primaryColor"
        app:cardCornerRadius="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@id/clickableContainerMyProfile"
        app:layout_constraintTop_toBottomOf="@id/clickableContainerMyProfile">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="24dp"
            android:background="@drawable/protocol_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="bottom"
            android:fontFamily="@font/muslish"
            android:padding="16dp"
            android:text="@string/protocols"
            android:textColor="@color/onPrimaryColor"
            android:textColorLink="@color/onPrimaryColor"
            android:textSize="12sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>